Fixes #6 - text in the navigation footer is not squished together anymore and Riepenhausen is spelled correctly

--- a/public/css/lunch.css
+++ b/public/css/lunch.css
@@ -39,13 +39,15 @@ body {
   height: 100%;
   text-align: center;
 }
+
 #navigation img {
   max-width: 70%;
   padding: .4em;
 }
+
 #navigation li {
-  padding-top: 0.6em;
-  padding-bottom: 0.6em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 #navigation li:hover {
@@ -81,6 +83,7 @@ body {
   padding-right: 1em;
   font-size: .7em;
   text-align: center;
+  line-height: 1.4em;
 }
 
 #navigation footer a {
